--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
         <title>{% block title %}{% endblock title %}</title>
     </head>
     <body>
-        <img src="{% static 'images/sitelogo.png' %}" alt="logo">
+        <img src="{% static 'images/sitelogo.jpg' %}" alt="logo" width=100px height=100px>
         {% block content %}{% endblock content %}
     </body>
 </html>
